qb cost adjustment
qb cost adjustment

--- a/quickbooks_odoo_connector/static/description/index.html
+++ b/quickbooks_odoo_connector/static/description/index.html
@@ -98,6 +98,60 @@
 									src="check.png" />
 							</div>
 							<div class="col-md-9">
+								<p style="margin-top:10px; color: rgba(0, 0, 17, 1);font-size: 16px;"><b> Automatic Mapping of Existing Customers</b></p>
+							</div>
+						</div>
+					</div>
+					<div class="col" style="margin: 10px;">
+						<div class="row" style="background-color:#edfcfb; border-radius: 13px;">
+							<div class="col-md-3 text-center">
+								<img class="img img-responsive" style="max-width:20%; margin-top: 11px;"
+									src="check.png" />
+							</div>
+							<div class="col-md-9">
+								<p style="margin-top:10px; color: rgba(0, 0, 17, 1);font-size: 16px;"><b>Automatic Mapping of Existing Employees</b></p>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="row">
+					<div class="col" style="margin: 10px;">
+						<div class="row" style="background-color:#edfcfb; border-radius: 13px;">
+							<div class="col-md-3 text-center">
+								<img class="img img-responsive" style="max-width:20%; margin-top: 11px;"
+									src="check.png" />
+							</div>
+							<div class="col-md-9">
+								<p style="margin-top:10px; color: rgba(0, 0, 17, 1);font-size: 16px;"><b>  Automatic Mapping of Existing Products</b></p>
+							</div>
+						</div>
+					</div>
+					<div class="col" style="margin: 10px;">
+						<div class="row" style="background-color:#edfcfb; border-radius: 13px;">
+							<div class="col-md-3 text-center">
+								<img class="img img-responsive" style="max-width:20%; margin-top: 11px;"
+									src="check.png" />
+							</div>
+							<div class="col-md-9">
+								<p style="margin-top:10px; color: rgba(0, 0, 17, 1);font-size: 16px;"><b>No Duplication of records</b></p>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+
+
+				<div class="row">
+					<div class="col" style="margin: 10px;">
+						<div class="row" style="background-color:#edfcfb; border-radius: 13px;">
+							<div class="col-md-3 text-center">
+								<img class="img img-responsive" style="max-width:20%; margin-top: 11px;"
+									src="check.png" />
+							</div>
+							<div class="col-md-9">
 								<p style="margin-top:10px; color: rgba(0, 0, 17, 1);font-size: 16px;"><b>Synchronization
 										on Single Click</b></p>
 							</div>
@@ -536,7 +590,7 @@
 								</div>
 								<div id="collapse_9" class="panel-collapse collapse mt16 mb16">
 									<div class="mb16">
-										<img src="import.png" class="img img-responsive center-block" />
+										<img src="importqb.png" class="img img-responsive center-block" />
 									</div>
 								</div>
 							</div>
@@ -558,7 +612,7 @@
 								</div>
 								<div id="collapse_14" class="panel-collapse collapse mt16 mb16">
 									<div class="mb16">
-										<img src="export.png" class="img img-responsive center-block" />
+										<img src="exportqb.png" class="img img-responsive center-block" />
 									</div>
 								</div>
 							</div>
@@ -580,7 +634,7 @@
 								</div>
 								<div id="collapse_155" class="panel-collapse collapse mt16 mb16">
 									<div class="mb16">
-										<img src="mapping.png" class="img img-responsive center-block" />
+										<img src="extrafieldqb.png" class="img img-responsive center-block" />
 									</div>
 								</div>
 							</div>
